2011-11-09  Daniel Sievers  <sievers@chromium.org>

        [chromium] Fix typo in checkerboarding code
        https://bugs.webkit.org/show_bug.cgi?id=71981

        Reviewed by James Robinson.

        No new tests.

        * platform/graphics/chromium/cc/CCTiledLayerImpl.cpp:
        (WebCore::CCTiledLayerImpl::drawTiles):

2011-11-09  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r99782.
        http://trac.webkit.org/changeset/99782
        https://bugs.webkit.org/show_bug.cgi?id=71979

        broke most of the feImage tests (Requested by thorton on
        #webkit).

        * svg/SVGFEImageElement.cpp:
        (WebCore::SVGFEImageElement::parseMappedAttribute):
        (WebCore::SVGFEImageElement::build):

2011-11-09  Kentaro Hara  <haraken@chromium.org>

        Remove [CanBeConstructed] IDL from CodeGenerator{JS,V8}.pm
        https://bugs.webkit.org/show_bug.cgi?id=71938

        Reviewed by Darin Adler.

        Now no IDL files are using [CanBeConstructed] IDL.
        We can safely remove [CanBeConstructed] IDL from CodeGenerator{JS,V8}.pm.

        No tests. No change in behavior.

        * bindings/scripts/CodeGeneratorJS.pm: Removed [CanBeConstructed]-related code.
        (GenerateConstructorDeclaration):
        (GenerateConstructorDefinition):
        * bindings/scripts/CodeGeneratorV8.pm: Ditto.
        (GenerateImplementation):
        * bindings/scripts/test/TestInterface.idl: Removed [CanBeConstructed].
        * bindings/v8/V8Proxy.h: Removed V8Proxy::constructDOMObject and V8Proxy::constructDOMObjectWithScriptExecutionContext, which had been used only by [CanBeConstructed].

2011-11-09  Tim Horton  <timothy_horton@apple.com>

        feImage referencing a primitive draws incorrectly
        https://bugs.webkit.org/show_bug.cgi?id=71731
        <rdar://problem/10408178>

        Reviewed by Simon Fraser.
        
        Don't attempt to resolve an <feImage>'s referenced element until it's used, as it