@@ -167,6 +167,9 @@
        (global-name "com.apple.window_proxies")
        (global-name "com.apple.windowserver.active")
 
+        ;; FIXME: This will be superfluous once <rdar://problem/10420555> is fixed.
+       (global-name "com.apple.cfnetwork.AuthBrokerAgent")
+
        ;; FIXME: This should be removed when <rdar://problem/9276393> is fixed.
        (global-name "com.apple.metadata.mds"))
 
