@@ -1,3 +1,12 @@
+2011-11-09  Alexey Proskuryakov  <ap@apple.com>
+
+        <rdar://problem/10423024> WebProcess doesn't use AuthBrokerAgent for proxy credentials
+        https://bugs.webkit.org/show_bug.cgi?id=71964
+
+        Reviewed by Darin Adler.
+
+        * WebProcess/com.apple.WebProcess.sb: Allow mach-lookup of com.apple.cfnetwork.AuthBrokerAgent.
+
 2011-11-09  Anders Carlsson  <andersca@apple.com>
 
         Element::boundsInWindowSpace should be Element::boundsInRootViewSpace
